--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,5 +59,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - run: pip install -r requirements-ci.txt -q
+      - name: Cache pytype data
+        if: ${{ matrix.task == 'Typecheck' }}
+        uses: actions/cache@v3
+        with:
+          path: .pytype
+          key: pytype-${{ matrix.python-version }}
       - name: ${{ matrix.task }}
         run: ${{ matrix.cmd }}
