--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           if [ -z $ACT ]
           then 
-            _ver="['3.8', '3.9', '3.10']"
+            _ver="['3.8', '3.9', '3.10', '3.11']"
             _cache="1"
           else 
             # 3.8 instead of '3.8' to make github act work.
